# langid

./: LICENSE  README.md  pyproject.toml
src/: dataset.py  langid.py
